Basic lookup achieved

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@octokit/rest": "^16.3.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "node-fetch": "^2.3.0",
+    "octonode": "^0.9.5"
   },
   "devDependencies": {
     "concurrently": "^4.1.0"
