--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "nodemon": "^1.18.9"
   },
   "devDependencies": {
     "concurrently": "^4.1.0"
